# researcher

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  PRD.MD  PROJECT_STATUS.md  README.md  fix-backend-upload-issues.plan.md  fsd.md  mypy.ini  pyproject.toml  sitecustomize.py  tasks.md  test_after_fixes.txt
.github/workflows/: ci.yml
backup/: cp_artifacts_backup.csv  cp_reference_snapshot.json
config/: settings.yaml
config/policies/: clinical.yaml  dataqa.yaml  example_checks_assertions.yaml  tools_limited.yaml
docs/: flujo.md  qa_plan.md
evals/: cp_b1.json  cp_b1_extended.json  demo.json  gov_e1.json  hotpotqa_small.json  mmlu_small.json  pcn_d1.json  rag_c1.json  refine_f1.json  stack_g1.json  strategyqa_small.json  uq_a1.json
jobs/: cloudrun-backup.Dockerfile
plan/: COMPONENTS.md  PRD.MD  QA.md  tasks.md
scripts/: __init__.py  backup_sqlite.py  check_secrets.py  demo_calibration.sh  eval_report.py  evals_to_cp.py  gcs_backup.py  gcs_restore.py  import_cp_artifacts.py  ingest_corpus.py  ingest_folder.py  load_smoke.py  mcp_server.py  migrate_policies_to_json.py  ping_agent.py  run_demo_evals.py  workspace_keys.py
src/uamm/agents/: main_agent.py  verifier.py
src/uamm/api/: main.py  routes.py  state.py
src/uamm/config/: policy_packs.py  settings.py
src/uamm/evals/: orchestrator.py  runner.py  storage.py  suites.py
src/uamm/flujo/: dsl.py  (+2 more)
tests/: conftest.py  test_agent_allowlist_unit.py  test_agent_table_query.py  test_api_evals.py  test_api_evals_env.py  test_api_ingest.py  test_api_redaction.py  test_api_tuner.py  test_approvals.py  test_auth.py  test_cp.py  test_cp_bootstrap.py  test_cp_converter.py  test_cp_importer.py  test_cp_reference.py  test_dashboard_endpoint.py  test_eval_metrics_extended.py  test_eval_storage.py  test_eval_suites.py  test_evals_adhoc_stream.py  test_faiss_adapter.py  test_faithfulness.py  test_flujo_nodes.py  test_gov.py  test_gov_assertions.py  test_gov_executor.py  test_guardrails_stub.py  test_lancedb_adapter.py  test_math_eval.py  test_mcp_stub.py  test_memory_promotion.py  test_metrics_faithfulness_json.py  test_metrics_json.py  test_pack.py  test_pcn.py  test_pcn_verifier.py  test_planning_basic.py  test_planning_domain_calibration.py  test_planning_mcts.py  test_policy.py  (+28 more)
tests/data/: cp_seed.json  cp_seed_full.json  demo.sqlite  demo_calibration.json  demo_eval_dataset.json  demo_eval_output.json  demo_table.csv  example.com_injection.html  example_com.html  web_search_results.json
(+89 files in other folders)
